force-app/main/default/objects/CheckList__c/CheckList__c.object-meta.xml
<CustomObject>
    <label>チェックリスト</label>
    <nameField>
        <displayFormat>CL-{000000000}</displayFormat>
        <label>チェックリスト名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>