force-app/main/default/objects/CheckList__c/fields/BathroomNote__c.field-meta.xml
<CustomField>
    <fullName>BathroomNote__c</fullName>
    <label>浴室_備考</label>
    <type>TextArea</type>
</CustomField>