force-app/main/default/objects/CheckList__c/fields/CollectivePostDialNo__c.field-meta.xml
<CustomField>
    <fullName>CollectivePostDialNo__c</fullName>
    <label>集合ポストダイヤルNo.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>