force-app/main/default/objects/CheckList__c/fields/CylinderExchange__c.field-meta.xml
<CustomField>
    <fullName>CylinderExchange__c</fullName>
    <defaultValue>false</defaultValue>
    <label>シリンダー交換</label>
    <type>Checkbox</type>
</CustomField>