force-app/main/default/objects/CheckList__c/fields/DamageImpurityFailureContentStatus__c.field-meta.xml
<CustomField>
    <fullName>DamageImpurityFailureContentStatus__c</fullName>
    <label>損傷・汚れ・故障_内容・状況</label>
    <type>TextArea</type>
</CustomField>