force-app/main/default/objects/CheckList__c/fields/DamageImpurityFailurePosition__c.field-meta.xml
<CustomField>
    <fullName>DamageImpurityFailurePosition__c</fullName>
    <label>損傷・汚れ・故障位置</label>
    <type>TextArea</type>
</CustomField>