force-app/main/default/objects/CheckList__c/fields/ElectricCompany__c.field-meta.xml
<CustomField>
    <fullName>ElectricCompany__c</fullName>
    <defaultValue>false</defaultValue>
    <label>電気</label>
    <type>Checkbox</type>
</CustomField>