force-app/main/default/objects/CheckList__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>社員</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>CheckListContactRelation1</relationshipName>
    <type>Lookup</type>
</CustomField>