force-app/main/default/objects/CheckList__c/fields/JapaneseAndWesternNote__c.field-meta.xml
<CustomField>
    <fullName>JapaneseAndWesternNote__c</fullName>
    <label>和・洋_備考</label>
    <type>TextArea</type>
</CustomField>