force-app/main/default/objects/CheckList__c/fields/KitchenCookingStoveRepairNecessity__c.field-meta.xml
<CustomField>
    <fullName>KitchenCookingStoveRepairNecessity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>台所・リビング_コンロ(ガスor電気)_補修要否</label>
    <type>Checkbox</type>
</CustomField>