force-app/main/default/objects/CheckList__c/fields/KitchenFrontCurrent__c.field-meta.xml
<CustomField>
    <fullName>KitchenFrontCurrent__c</fullName>
    <label>台所・リビング_玄関ドア/ドアポスト_現在の状況</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>良</fullName>
            </value>
            <value>
                <fullName>不良</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>