force-app/main/default/objects/CheckList__c/fields/KitchenFrontRepair__c.field-meta.xml
<CustomField>
    <fullName>KitchenFrontRepair__c</fullName>
    <defaultValue>false</defaultValue>
    <label>台所・リビング_玄関ドア/ドアポスト_補修要否</label>
    <type>Checkbox</type>
</CustomField>