force-app/main/default/objects/CheckList__c/fields/KitchenlightingEquipmentStatus__c.field-meta.xml
<CustomField>
    <fullName>KitchenlightingEquipmentStatus__c</fullName>
    <label>台所・リビング_照明器具_現在の状況</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>良</fullName>
            </value>
            <value>
                <fullName>不良</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>