force-app/main/default/objects/CheckList__c/fields/KitchenLivingPlace__c.field-meta.xml
<CustomField>
    <fullName>KitchenLivingPlace__c</fullName>
    <label>台所・リビング_備考</label>
    <type>TextArea</type>
</CustomField>