force-app/main/default/objects/CheckList__c/fields/KitchenVentilationFanRepair__c.field-meta.xml
<CustomField>
    <fullName>KitchenVentilationFanRepair__c</fullName>
    <defaultValue>false</defaultValue>
    <label>台所・リビング_換気扇_補修要否</label>
    <type>Checkbox</type>
</CustomField>