force-app/main/default/objects/CheckList__c/fields/KitchenWallRepair__c.field-meta.xml
<CustomField>
    <fullName>KitchenWallRepair__c</fullName>
    <defaultValue>false</defaultValue>
    <label>台所・リビング_壁(クロス/化粧板/塗り壁)_補修要否</label>
    <type>Checkbox</type>
</CustomField>