force-app/main/default/objects/CheckList__c/fields/Notice1__c.field-meta.xml
<CustomField>
    <fullName>Notice1__c</fullName>
    <label>伝えておきたいこと</label>
    <type>TextArea</type>
</CustomField>