force-app/main/default/objects/CheckList__c/fields/OtherSlidingDoorCurrentStatus__c.field-meta.xml
<CustomField>
    <fullName>OtherSlidingDoorCurrentStatus__c</fullName>
    <label>その他_襖_現在の状況</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>良</fullName>
            </value>
            <value>
                <fullName>不良</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>