force-app/main/default/objects/CheckList__c/fields/OtherSlidingDoorPlace__c.field-meta.xml
<CustomField>
    <fullName>OtherSlidingDoorPlace__c</fullName>
    <label>その他_襖_場所</label>
    <length>255</length>
    <type>Text</type>
</CustomField>