force-app/main/default/objects/CheckList__c/fields/OtherSlidingDoorRepairNecessity__c.field-meta.xml
<CustomField>
    <fullName>OtherSlidingDoorRepairNecessity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>その他_襖_補修要否</label>
    <type>Checkbox</type>
</CustomField>