force-app/main/default/objects/CheckList__c/fields/RealEstateStatus__c.field-meta.xml
<CustomField>
    <fullName>RealEstateStatus__c</fullName>
    <label>物件ステータス</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>問題なし;問題があり</fullName>
            </value>
            <value>
                <fullName>管理会社・家主へ修正依頼済み;問題はあるが修理の必要無し</fullName>
            </value>
            <value>
                <fullName>問題はあるが修理しないものと修理が必要なもの両方ある</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>