force-app/main/default/objects/CheckList__c/fields/ToiletFaucetTankDrainageRepairNecessity__c.field-meta.xml
<CustomField>
    <fullName>ToiletFaucetTankDrainageRepairNecessity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>トイレ_水栓タンク/排水_補修要否</label>
    <type>Checkbox</type>
</CustomField>