force-app/main/default/objects/CheckList__c/fields/ToiletNote__c.field-meta.xml
<CustomField>
    <fullName>ToiletNote__c</fullName>
    <label>トイレ_備考</label>
    <type>TextArea</type>
</CustomField>