force-app/main/default/objects/CheckList__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Change__c</columns>
    <columns>NewMatter__c</columns>
    <columns>Cancel__c</columns>
    <columns>RealEstate__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>